src/snapshots/transmute__symbol_table__tests__find_in_scope.snap
---
source: src/symbol_table.rs
expression: "XmlWriter::new(&ast, &table).serialize()"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <scopes>
    <scope id="scope:0">
      <child ref="scope:1" />
    </scope>
    <scope id="scope:1" parent="scope:0">
      <child ref="scope:2" />
    </scope>
    <scope id="scope:2" parent="scope:1">
      <child ref="scope:3" />
    </scope>
    <scope id="scope:3" parent="scope:2">
      <child ref="scope:4" />
    </scope>
    <scope id="scope:4" parent="scope:3">
      <child ref="scope:5" />
    </scope>
    <scope id="scope:5" parent="scope:4">
      <child ref="scope:6" />
    </scope>
    <scope id="scope:6" parent="scope:5">
      <child ref="scope:7" />
    </scope>
    <scope id="scope:7" parent="scope:6" />
  </scopes>
  <symbols>
    <symbol id="sym:0" scope="scope:0">
      <native>
        <name>sub</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:1" scope="scope:0">
      <native>
        <name>neq</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:2" scope="scope:0">
      <native>
        <name>neq</name>
        <parameters>
          <parameter>boolean</parameter>
          <parameter>boolean</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:3" scope="scope:0">
      <native>
        <name>neg</name>
        <parameters>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:4" scope="scope:0">
      <native>
        <name>mul</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:5" scope="scope:0">
      <native>
        <name>lt</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:6" scope="scope:0">
      <native>
        <name>le</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:7" scope="scope:0">
      <native>
        <name>gt</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:8" scope="scope:0">
      <native>
        <name>ge</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:9" scope="scope:0">
      <native>
        <name>eq</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:10" scope="scope:0">
      <native>
        <name>eq</name>
        <parameters>
          <parameter>boolean</parameter>
          <parameter>boolean</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:11" scope="scope:0">
      <native>
        <name>div</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:12" scope="scope:0">
      <native>
        <name>add</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:13" scope="scope:1">
      <statement ref="stmt:4" />
    </symbol>
    <symbol id="sym:14" scope="scope:2">
      <parameter target-id="stmt:4:0" ident-ref="ident:1" type-ref="ident:2" />
    </symbol>
    <symbol id="sym:15" scope="scope:4">
      <statement ref="stmt:0" />
    </symbol>
    <symbol id="sym:16" scope="scope:5">
      <statement ref="stmt:1" />
    </symbol>
    <symbol id="sym:17" scope="scope:6">
      <statement ref="stmt:2" />
    </symbol>
    <symbol id="sym:18" scope="scope:7">
      <statement ref="stmt:3" />
    </symbol>
  </symbols>
  <ast>
    <identifiers>
      <ident id="ident:0">f</ident>
      <ident id="ident:1">n</ident>
      <ident id="ident:2">number</ident>
      <ident id="ident:3">m</ident>
      <ident id="ident:4">p</ident>
      <ident id="ident:5">q</ident>
      <ident id="ident:6">add</ident>
      <ident id="ident:7">div</ident>
      <ident id="ident:8">eq</ident>
      <ident id="ident:9">ge</ident>
      <ident id="ident:10">gt</ident>
      <ident id="ident:11">le</ident>
      <ident id="ident:12">lt</ident>
      <ident id="ident:13">mul</ident>
      <ident id="ident:14">neg</ident>
      <ident id="ident:15">neq</ident>
      <ident id="ident:16">sub</ident>
    </identifiers>
    <stmt id="stmt:4" line="1" column="1" start="0" len="70" scope="scope:1">
      <fn>
        <identifier ref="ident:0" line="1" column="5" start="4" len="1">f</identifier>
        <parameters>
          <parameter id="stmt:4:0" line="1" column="7" start="6" len="9">
            <name ref="ident:1" line="1" column="7" start="6" len="1">n</name>
            <type ref="ident:2" line="1" column="10" start="9" len="6">number</type>
          </parameter>
        </parameters>
        <body line="1" column="20" start="19" len="51">
          <expr id="expr:6" line="1" column="20" start="19" len="51" scope="scope:2">
            <block>
              <stmt id="stmt:0" line="1" column="22" start="21" len="10" scope="scope:3">
                <let>
                  <identifier ref="ident:3" line="1" column="26" start="25" len="1">m</identifier>
                  <expression line="1" column="30" start="29" len="1">
                    <expr id="expr:0" line="1" column="30" start="29" len="1" scope="scope:3">
                      <number>0</number>
                    </expr>
                  </expression>
                </let>
              </stmt>
              <stmt id="stmt:1" line="1" column="33" start="32" len="10" scope="scope:4">
                <let>
                  <identifier ref="ident:4" line="1" column="37" start="36" len="1">p</identifier>
                  <expression line="1" column="41" start="40" len="1">
                    <expr id="expr:1" line="1" column="41" start="40" len="1" scope="scope:4">
                      <number>0</number>
                    </expr>
                  </expression>
                </let>
              </stmt>
              <stmt id="stmt:2" line="1" column="44" start="43" len="14" scope="scope:5">
                <let>
                  <identifier ref="ident:4" line="1" column="48" start="47" len="1">p</identifier>
                  <expression line="1" column="52" start="51" len="5">
                    <expr id="expr:4" line="1" column="52" start="51" len="5" scope="scope:5">
                      <binary operator="+" line="1" column="52" start="51" len="5">
                        <left>
                          <expr id="expr:2" line="1" column="52" start="51" len="1" scope="scope:5">
                            <identifier-ref id="ident-ref:0" ident-ref="ident:1" target-id="">n</identifier-ref>
                          </expr>
                        </left>
                        <right>
                          <expr id="expr:3" line="1" column="56" start="55" len="1" scope="scope:5">
                            <identifier-ref id="ident-ref:1" ident-ref="ident:3" target-id="">m</identifier-ref>
                          </expr>
                        </right>
                      </binary>
                    </expr>
                  </expression>
                </let>
              </stmt>
              <stmt id="stmt:3" line="1" column="59" start="58" len="10" scope="scope:6">
                <let>
                  <identifier ref="ident:5" line="1" column="63" start="62" len="1">q</identifier>
                  <expression line="1" column="67" start="66" len="1">
                    <expr id="expr:5" line="1" column="67" start="66" len="1" scope="scope:6">
                      <identifier-ref id="ident-ref:2" ident-ref="ident:4" target-id="">p</identifier-ref>
                    </expr>
                  </expression>
                </let>
              </stmt>
            </block>
          </expr>
        </body>
      </fn>
    </stmt>
  </ast>
</unit>
