src/snapshots/transmute__symbol_table__tests__if_statement.snap
---
source: src/symbol_table.rs
expression: "XmlWriter::new(&ast, &table).serialize()"
---
<?xml version="1.0" encoding="utf-8"?>
<unit>
  <scopes>
    <scope id="scope:0">
      <child ref="scope:1" />
    </scope>
    <scope id="scope:1" parent="scope:0">
      <child ref="scope:2" />
    </scope>
    <scope id="scope:2" parent="scope:1">
      <child ref="scope:3" />
    </scope>
    <scope id="scope:3" parent="scope:2">
      <child ref="scope:4" />
    </scope>
    <scope id="scope:4" parent="scope:3">
      <child ref="scope:5" />
      <child ref="scope:7" />
      <child ref="scope:12" />
    </scope>
    <scope id="scope:5" parent="scope:4">
      <child ref="scope:6" />
    </scope>
    <scope id="scope:6" parent="scope:5" />
    <scope id="scope:7" parent="scope:4">
      <child ref="scope:8" />
      <child ref="scope:10" />
    </scope>
    <scope id="scope:8" parent="scope:7">
      <child ref="scope:9" />
    </scope>
    <scope id="scope:9" parent="scope:8" />
    <scope id="scope:10" parent="scope:7">
      <child ref="scope:11" />
    </scope>
    <scope id="scope:11" parent="scope:10" />
    <scope id="scope:12" parent="scope:4" />
  </scopes>
  <symbols>
    <symbol id="sym:0" scope="scope:0">
      <native>
        <name>sub</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:1" scope="scope:0">
      <native>
        <name>neq</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:2" scope="scope:0">
      <native>
        <name>neq</name>
        <parameters>
          <parameter>boolean</parameter>
          <parameter>boolean</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:3" scope="scope:0">
      <native>
        <name>neg</name>
        <parameters>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:4" scope="scope:0">
      <native>
        <name>mul</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:5" scope="scope:0">
      <native>
        <name>lt</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:6" scope="scope:0">
      <native>
        <name>le</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:7" scope="scope:0">
      <native>
        <name>gt</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:8" scope="scope:0">
      <native>
        <name>ge</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:9" scope="scope:0">
      <native>
        <name>eq</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:10" scope="scope:0">
      <native>
        <name>eq</name>
        <parameters>
          <parameter>boolean</parameter>
          <parameter>boolean</parameter>
        </parameters>
        <return>boolean</return>
      </native>
    </symbol>
    <symbol id="sym:11" scope="scope:0">
      <native>
        <name>div</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:12" scope="scope:0">
      <native>
        <name>add</name>
        <parameters>
          <parameter>number</parameter>
          <parameter>number</parameter>
        </parameters>
        <return>number</return>
      </native>
    </symbol>
    <symbol id="sym:13" scope="scope:1">
      <statement ref="stmt:11" />
    </symbol>
    <symbol id="sym:14" scope="scope:4">
      <statement ref="stmt:0" />
    </symbol>
    <symbol id="sym:15" scope="scope:6">
      <statement ref="stmt:1" />
    </symbol>
    <symbol id="sym:16" scope="scope:9">
      <statement ref="stmt:3" />
    </symbol>
    <symbol id="sym:17" scope="scope:11">
      <statement ref="stmt:5" />
    </symbol>
    <symbol id="sym:18" scope="scope:12">
      <statement ref="stmt:9" />
    </symbol>
  </symbols>
  <ast>
    <identifiers>
      <ident id="ident:0">f</ident>
      <ident id="ident:1">a</ident>
      <ident id="ident:2">b</ident>
      <ident id="ident:3">c</ident>
      <ident id="ident:4">d</ident>
      <ident id="ident:5">e</ident>
      <ident id="ident:6">add</ident>
      <ident id="ident:7">div</ident>
      <ident id="ident:8">eq</ident>
      <ident id="ident:9">ge</ident>
      <ident id="ident:10">gt</ident>
      <ident id="ident:11">le</ident>
      <ident id="ident:12">lt</ident>
      <ident id="ident:13">mul</ident>
      <ident id="ident:14">neg</ident>
      <ident id="ident:15">neq</ident>
      <ident id="ident:16">sub</ident>
    </identifiers>
    <stmt id="stmt:11" line="2" column="13" start="13" len="399" scope="scope:1">
      <fn>
        <identifier ref="ident:0" line="2" column="17" start="17" len="1">f</identifier>
        <parameters />
        <body line="2" column="23" start="23" len="389">
          <expr id="expr:17" line="2" column="23" start="23" len="389" scope="scope:2">
            <block>
              <stmt id="stmt:0" line="3" column="17" start="41" len="10" scope="scope:3">
                <let>
                  <identifier ref="ident:1" line="3" column="21" start="45" len="1">a</identifier>
                  <expression line="3" column="25" start="49" len="1">
                    <expr id="expr:0" line="3" column="25" start="49" len="1" scope="scope:3">
                      <number>0</number>
                    </expr>
                  </expression>
                </let>
              </stmt>
              <stmt id="stmt:8" line="4" column="17" start="68" len="283" scope="scope:4">
                <expr id="expr:14" line="4" column="17" start="68" len="283" scope="scope:4">
                  <if>
                    <condition>
                      <expr id="expr:1" line="4" column="20" start="71" len="4" scope="scope:4">
                        <bool>true</bool>
                      </expr>
                    </condition>
                    <true>
                      <expr id="expr:4" line="4" column="25" start="76" len="74" scope="scope:4">
                        <block>
                          <stmt id="stmt:1" line="5" column="21" start="98" len="11" scope="scope:5">
                            <let>
                              <identifier ref="ident:2" line="5" column="25" start="102" len="1">b</identifier>
                              <expression line="5" column="29" start="106" len="2">
                                <expr id="expr:2" line="5" column="29" start="106" len="2" scope="scope:5">
                                  <number>42</number>
                                </expr>
                              </expression>
                            </let>
                          </stmt>
                          <stmt id="stmt:2" line="6" column="21" start="130" len="2" scope="scope:6">
                            <expr id="expr:3" line="6" column="21" start="130" len="1" scope="scope:6">
                              <identifier-ref id="ident-ref:0" ident-ref="ident:2" target-id="">b</identifier-ref>
                            </expr>
                          </stmt>
                        </block>
                      </expr>
                    </true>
                    <false>
                      <expr id="expr:13" line="8" column="22" start="172" len="179" scope="scope:4">
                        <block>
                          <stmt id="stmt:7" line="8" column="22" start="172" len="179" scope="scope:7">
                            <expr id="expr:12" line="8" column="22" start="172" len="179" scope="scope:7">
                              <if>
                                <condition>
                                  <expr id="expr:5" line="8" column="25" start="175" len="5" scope="scope:7">
                                    <bool>false</bool>
                                  </expr>
                                </condition>
                                <true>
                                  <expr id="expr:8" line="8" column="31" start="181" len="74" scope="scope:7">
                                    <block>
                                      <stmt id="stmt:3" line="9" column="21" start="203" len="11" scope="scope:8">
                                        <let>
                                          <identifier ref="ident:3" line="9" column="25" start="207" len="1">c</identifier>
                                          <expression line="9" column="29" start="211" len="2">
                                            <expr id="expr:6" line="9" column="29" start="211" len="2" scope="scope:8">
                                              <number>42</number>
                                            </expr>
                                          </expression>
                                        </let>
                                      </stmt>
                                      <stmt id="stmt:4" line="10" column="21" start="235" len="2" scope="scope:9">
                                        <expr id="expr:7" line="10" column="21" start="235" len="1" scope="scope:9">
                                          <identifier-ref id="ident-ref:1" ident-ref="ident:3" target-id="">c</identifier-ref>
                                        </expr>
                                      </stmt>
                                    </block>
                                  </expr>
                                </true>
                                <false>
                                  <expr id="expr:11" line="12" column="22" start="277" len="74" scope="scope:7">
                                    <block>
                                      <stmt id="stmt:5" line="13" column="21" start="299" len="11" scope="scope:10">
                                        <let>
                                          <identifier ref="ident:4" line="13" column="25" start="303" len="1">d</identifier>
                                          <expression line="13" column="29" start="307" len="2">
                                            <expr id="expr:9" line="13" column="29" start="307" len="2" scope="scope:10">
                                              <number>42</number>
                                            </expr>
                                          </expression>
                                        </let>
                                      </stmt>
                                      <stmt id="stmt:6" line="14" column="21" start="331" len="2" scope="scope:11">
                                        <expr id="expr:10" line="14" column="21" start="331" len="1" scope="scope:11">
                                          <identifier-ref id="ident-ref:2" ident-ref="ident:4" target-id="">d</identifier-ref>
                                        </expr>
                                      </stmt>
                                    </block>
                                  </expr>
                                </false>
                              </if>
                            </expr>
                          </stmt>
                        </block>
                      </expr>
                    </false>
                  </if>
                </expr>
              </stmt>
              <stmt id="stmt:9" line="16" column="17" start="368" len="11" scope="scope:4">
                <let>
                  <identifier ref="ident:5" line="16" column="21" start="372" len="1">e</identifier>
                  <expression line="16" column="25" start="376" len="2">
                    <expr id="expr:15" line="16" column="25" start="376" len="2" scope="scope:4">
                      <number>42</number>
                    </expr>
                  </expression>
                </let>
              </stmt>
              <stmt id="stmt:10" line="17" column="17" start="396" len="2" scope="scope:12">
                <expr id="expr:16" line="17" column="17" start="396" len="1" scope="scope:12">
                  <identifier-ref id="ident-ref:3" ident-ref="ident:5" target-id="">e</identifier-ref>
                </expr>
              </stmt>
            </block>
          </expr>
        </body>
      </fn>
    </stmt>
  </ast>
</unit>
